# BlamSauce

./: CMakeLists.txt  README.md  primary.cpp  primary.h  primary.hpp
BlamSauce/: CMakeLists.txt  FileIO.hpp  MainYelo.cpp  Settings.hpp  file_io.h  primary.h
BlamSauce/ai/: CMakeLists.txt  ai_communication.h  ai_scenario_definitions.h  ai_script.h  ai_structures.h  encounters.h  prop_structures.h
BlamSauce/ai/actions/: action_avoid.hpp  action_fight.hpp  action_flee.hpp  actions.hpp
BlamSauce/ai/actors/: actor_definitions.hpp  actor_moving.hpp  actor_perception.hpp  actor_structures.hpp  actor_types.hpp  actors.hpp  tranform_manager.h
BlamSauce/ai/ai_yelo/: AI.Transform.inl  AI.cpp  AI.hpp
BlamSauce/ai/yelo_lib/: ai_yelo.cpp  ai_yelo.hpp
BlamSauce/cache/: CMakeLists.txt  builder.hpp  cache_base.hpp  cache_file_memory.hpp  cache_file_memory_gestalt_definitions.hpp  cache_file_memory_layout_table_definitions.hpp  cache_files.hpp  cache_files_globals.hpp  cache_files_structures.hpp  cache_files_structures_yelo.hpp  cache_files_yelo.hpp  constants.hpp  data_file.hpp  data_file_structures.hpp  data_file_yelo.hpp  physical_memory_map.hpp  physical_memory_map_structures.hpp  predicted_resources.hpp
BlamSauce/cache/shared/: pc_sound_cache.hpp  pc_texture_cache.hpp  shared_cache_file_definitions.hpp  shared_cache_files.hpp  sound_cache.hpp  texture_cache.hpp
BlamSauce/common_yelo/: DebugDump.cpp  FileIO.hpp
BlamSauce/cryptography/: cryptography.h  xxtea.cpp  xxtea.hpp
BlamSauce/cseries/: MacrosCpp.h  base.h  cseries.h  handle_abi.hpp  non_pod_container.hpp  value_conversion.hpp  yelo_base.h
BlamSauce/effects/: CMakeLists.txt  effect_definitions.hpp  effects.h  effects.hpp  effects_constants.hpp
BlamSauce/effects/contrail/: contrail_definitions.hpp
BlamSauce/effects/damage/: damage_effect_definitions.hpp
BlamSauce/effects/material/: material_effect_definitions.hpp
BlamSauce/effects/particle/: particle_definitions.hpp  particle_system_definitions.hpp
BlamSauce/effects/player/: player_effects.hpp
BlamSauce/effects/shader/: shader_definitions.hpp
BlamSauce/effects/sound/: sound_definitions.hpp  sound_environment_definitions.hpp
BlamSauce/game/: CMakeLists.txt  GameBuildNumber.cpp  Lights.hpp  action_queue.h  action_queue.hpp  allegiance.h  allegiance.hpp  build_number.h  cheats.h  cheats.hpp  configuration.h  configuration.hpp  game.hpp  lights.h  multiplayer_sounds.hpp  physics.h  state.h  system_definitions.h  systems.h
BlamSauce/game/campaign_yelo/: Campaign.cpp
BlamSauce/game/devices/: CMakeLists.txt  definitions.hpp  devices.hpp  light_fixtures.hpp  machines.hpp  structures.hpp
BlamSauce/game/engines/: CMakeLists.txt  engine.hpp  engine_ctf.hpp  engine_king.hpp  engine_oddball.hpp  engine_race.hpp  engine_slayer.hpp  game_engine.h  game_engine_yelo.h  variants.h
BlamSauce/game/globals/: CMakeLists.txt  globals.hpp  globals_definitions.hpp  globals_structures.hpp
BlamSauce/game/objects/: CMakeLists.txt  damage.hpp  damage_upgrades.h  index_resolution.hpp  object_definitions.hpp  object_lights.hpp  object_structures.h  object_structures.hpp  object_types.h  objects.h  objects.hpp  objects_yelo.h  placeholder_definitions.hpp  scenario_object_definitions_structures.hpp  scenery_definitions.hpp  sound_scenery_definitions.hpp  vehicle_remapper.hpp
BlamSauce/game/player/: CMakeLists.txt  player_action.hpp  player_control.hpp  player_structures.hpp  players.hpp
BlamSauce/game/scripting/: scripting.h
BlamSauce/game/system/: CMakeLists.txt  system_definitions.h  systems.h
BlamSauce/game/time/: CMakeLists.txt  time.hpp  time_structures.hpp
BlamSauce/game/yelo_extra/: CMakeLists.txt  gamestate_procs.inl  runtime_data.h  scripting.inl  server_list.inl
BlamSauce/game/yelo_lib/: GameState.Procs.inl  GameState.ServerList.inl  GameState.hpp  GameStateRuntimeData.Scripting.inl  GameStateRuntimeData.cpp
BlamSauce/hs/: CMakeLists.txt  compile.h  compile.hpp  hs.h  hs.hpp  hs_library_definitions_yelo.hpp  hs_yelo.hpp  library_external.hpp  object_lists.hpp  object_lists_structures.hpp  objects.h  runtime.hpp  runtime_structures.hpp  scenario.hpp  structures.hpp  threads.h  threads.hpp  types.hpp  types_runtime.inl  types_traits.hpp
BlamSauce/hs/types/: runtime.inl  (+2 more)
BlamSauce/interface/: CMakeLists.txt  Keystone.hpp  console.h  d_input_wrapper.h  map_list.hpp  terminal.hpp  ui_video_screen.hpp
BlamSauce/items/: equipment_definitions.h  equipment_definitions.hpp  equipment_definitions_yelo.h  equipment_structures.h  equipment_structures.hpp  equipment_structures_yelo.h  garbage_definitions.h  garbage_definitions.hpp  item_definitions.hpp  item_structures.hpp  projectile_definitions.hpp  projectiles.h  projectiles.hpp  weapon_definitions.h  weapon_definitions.hpp  weapon_structures.h  weapon_structures.hpp  weapons.hpp
BlamSauce/main/: CMakeLists.txt  campaign.h  console.hpp  editor.hpp  main.h  main_structures.h
BlamSauce/math/: CMakeLists.txt  color_math.h  integer_math.h  periodic_functions.h  random.hpp  real_math.h
BlamSauce/memory/: CMakeLists.txt  array.h  array_yelo.hpp  bitstream.h  byte_swapping.h  byte_swapping_base.h  circular_queue.h  data.h  data_base.h  datum_index.h  debug.h  files.hpp  linked_list.hpp  lruv_cache.h  memory_interface_base.hpp  memory_pool.h  memory_yelo.hpp  packed_file.hpp  physical_memory_allocation.hpp  position_queue.h  profiling.h  simple_circular_queue.h
BlamSauce/models/: CMakeLists.txt  collisions.hpp  model_definitions.hpp  models.hpp
BlamSauce/network/: CMakeLists.txt  GameSpyApi.hpp  Networking.hpp  connections.hpp  gamespy_api.h  message_header.h  networking.h  version_check.h
BlamSauce/render/: CMakeLists.txt  c_lightmap_manager.hpp  c_sky_manager.hpp  cameras.hpp  constants.hpp  objects.hpp  render.hpp  render_upgrades.inl
BlamSauce/scenario/: CMakeLists.txt  definitions.h  project_yellow_scenario.hpp  scenario.h  structure_bsp.h  structures.h
BlamSauce/tags/: CMakeLists.txt  bitmap_grp.h  tag_database_definitions.hpp
tempera/: CMakeLists.txt  main.cpp
tempera/experiments/: .gitignore
(+820 files in other folders)
